js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
typeof
import
.
source
.
UNKNOWN
;
}
